--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -13,19 +13,40 @@
   <url>http://www.example.com</url>
 
   <properties>
+    <argLine>-Duser.language=en</argLine>
+		<hibernate-artifact-id>hibernate-core</hibernate-artifact-id>
+		<hibernate-group-id>org.hibernate.orm</hibernate-group-id>
+		<hibernate-version>6.6.13.Final</hibernate-version>
+		<hibernate-jpamodelgen-artifact-id>hibernate-jpamodelgen</hibernate-jpamodelgen-artifact-id>
+		<hibernate-jpamodelgen-group-id>${hibernate-group-id}</hibernate-jpamodelgen-group-id>
+		<hibernate-jpamodelgen-version>6.4.9.Final</hibernate-jpamodelgen-version>
+		<java.version>24</java.version>
+		<javafx.version>24</javafx.version>
+		<junit.jupiter.version>5.13.1</junit.jupiter.version>
+    <maven.compiler.source>24</maven.compiler.source>
+    <maven.compiler.target>24</maven.compiler.target>
+		<maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+    <maven.resource.plugin.version>3.3.1</maven.resource.plugin.version>
+		<maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
+		<maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
+		<org.mapstruct.version>1.6.3</org.mapstruct.version>
+		<org.projectlombok.version>1.18.34</org.projectlombok.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <!-- external dependencies -->
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${junit.jupiter.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -37,24 +58,24 @@
         </plugin>
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>${maven.compiler.plugin.version}</version>
         </plugin>
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>2.5.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
         <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven.surefire.plugin.version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
