--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>r-uu</groupId>
-  <artifactId>r-uu</artifactId>
-  <version>0.0.1</version>
+  <artifactId>r-uu-mvn-config</artifactId>
+  <version>${r-uu-mvn-config-version}</version>
+  <packaging>pom</packaging>
 
-  <name>r-uu</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>${project.artifactId}</name>
+
+  <url>https://github.com/r-uu/codespace</url>
 
   <properties>
+    <!-- use "." in normal property names -->
     <argLine>-Duser.language=en</argLine>
-		<hibernate-artifact-id>hibernate-core</hibernate-artifact-id>
-		<hibernate-group-id>org.hibernate.orm</hibernate-group-id>
-		<hibernate-version>6.6.13.Final</hibernate-version>
-		<hibernate-jpamodelgen-artifact-id>hibernate-jpamodelgen</hibernate-jpamodelgen-artifact-id>
-		<hibernate-jpamodelgen-group-id>${hibernate-group-id}</hibernate-jpamodelgen-group-id>
-		<hibernate-jpamodelgen-version>6.4.9.Final</hibernate-jpamodelgen-version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>24</java.version>
 		<javafx.version>24</javafx.version>
-		<junit.jupiter.version>5.13.1</junit.jupiter.version>
-    <maven.compiler.source>24</maven.compiler.source>
-    <maven.compiler.target>24</maven.compiler.target>
-		<maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
-    <maven.resource.plugin.version>3.3.1</maven.resource.plugin.version>
-		<maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
-		<maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
-		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
-		<org.mapstruct.version>1.6.3</org.mapstruct.version>
-		<org.projectlombok.version>1.18.34</org.projectlombok.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- plugin versions, use "-" from artifact names in version property names -->
+		<hibernate-jpamodelgen-version>6.4.9.Final</hibernate-jpamodelgen-version>
+		<junit-jupiter-version>5.13.1</junit-jupiter-version>
+    <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
+		<maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
+		<maven-deploy-plugin-version>2.8.2</maven-deploy-plugin-version>
+		<maven-install-plugin-version>2.5.2</maven-install-plugin-version>
+		<maven-jar-plugin-version>3.0.2</maven-jar-plugin-version>
+		<maven-project-info-reports-plugin-version>3.0.0</maven-project-info-reports-plugin-version>
+    <maven-resource-plugin-version>3.3.1</maven-resource-plugin-version>
+		<maven-site-plugin-version>3.7.1</maven-site-plugin-version>
+		<maven-surefire-plugin-version>3.5.0</maven-surefire-plugin-version>
+		<maven-dependency-plugin-version>3.6.1</maven-dependency-plugin-version>
+		<org-mapstruct-version>1.6.3</org-mapstruct-version>
+		<org-projectlombok-version>1.18.34</org-projectlombok-version>
+		<properties-maven-plugin-version>1.2.1</properties-maven-plugin-version>
+    <r-uu-mvn-config-version>0.0.1</r-uu-mvn-config-version>
+    <r-uu-mvn-control-version>0.0.1</r-uu-mvn-control-version>
   </properties>
 
   <dependencyManagement>
@@ -41,7 +50,7 @@
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>${junit.jupiter.version}</version>
+				<version>${junit-jupiter-version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -51,46 +60,63 @@
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>${maven-clean-plugin-version}</version>
         </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven.compiler.plugin.version}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.plugin.version}</version>
+          <version>${maven-compiler-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>${maven-deploy-plugin-version}</version>
         </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>${maven-install-plugin-version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${maven-jar-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>${maven-project-info-reports-plugin-version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${maven-resource-plugin-version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin-version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${maven-site-plugin-version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>${properties-maven-plugin-version}</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>read-project-properties</goal>
+            </goals>
+            <configuration>
+              <files>
+                <file>pom.properties</file>
+              </files>
+            </configuration>
+          </execution>
+        </executions>        
+      </plugin>
+    </plugins>
   </build>
 </project>
