--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -1,1 +1,28 @@
+name: Build mvn-control with Maven
 
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: r-uu/mvn-control
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java 24
+        uses: actions/setup-java@v4
+        with:
+          java-version: '24'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        run: mvn clean install
