--- a/.github/workflows/r-uu_mvn_control_mvn_clean_install.yml
+++ b/.github/workflows/r-uu_mvn_control_mvn_clean_install.yml
@@ -1,1 +1,35 @@
+name: build mvn-control with maven triggered by hand
 
+on:
+  workflow_dispatch:
+    inputs:
+      module:
+        description: 'module to build'
+        required: true
+        default: 'r-uu/mvn-control'
+      skipTests:
+        description: 'skip tests?'
+        required: false
+        default: 'false'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.module }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: set up java 24
+        uses: actions/setup-java@v4
+        with:
+          java-version: '24'
+          distribution: 'temurin'
+      - name: build with maven
+        working-directory: ${{ inputs.module }}
+        run: |
+          if [[ "${{ inputs.skipTests }}" == "true" ]]; then
+            mvn clean install -DskipTests
+          else
+            mvn clean install
+          fi
