--- a/.github/workflows/r-uu_mvn_control_mvn_clean_install.yml
+++ b/.github/workflows/r-uu_mvn_control_mvn_clean_install.yml
@@ -1,4 +1,4 @@
-name: build mvn-control with maven triggered by hand
+name: build mvn-control with maven triggered manually
 
 on:
   workflow_dispatch:
