--- a/.github/workflows/mvn_clean_install_control.yml
+++ b/.github/workflows/mvn_clean_install_control.yml
@@ -1,10 +1,10 @@
-name: build mvn-control with maven triggered manually
+name: build module r-uu/mvn-control with maven triggered manually
 
 on:
   workflow_dispatch:
     inputs:
       module:
-        description: 'module to build'
+        description: 'module r-uu/mvn-control'
         required: true
         default: 'r-uu/mvn-control'
       skipTests:
