--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -8,7 +8,8 @@
 
   <groupId>r-uu</groupId>
   <artifactId>r-uu-mvn-config</artifactId>
-  <version>${r-uu-mvn-config-version}</version>
+  <!-- <version>${r-uu-mvn-config-version}</version> -->
+  <version>0.0.1</version>
   <packaging>pom</packaging>
 
   <name>${project.artifactId}</name>
