--- a/r-uu/lib/pom.xml
+++ b/r-uu/lib/pom.xml
@@ -5,22 +5,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>r-uu-lib</artifactId>
+  <artifactId>r-uu.codespace.lib</artifactId>
   <packaging>pom</packaging>
-	<description>root module for possibly reusable artifacts of group r-uu</description>
+  <description>root module for possibly reusable library artifacts of group r-uu</description>
+  <name>${project.artifactId}</name>
 
   <modules>
   </modules>
 
   <parent>
     <groupId>r-uu</groupId>
-    <artifactId>r-uu-mvn-control</artifactId>
+    <artifactId>r-uu.codespace.mvn-control</artifactId>
     <version>0.0.1</version>
     <relativePath>../mvn-control</relativePath>
   </parent>
-
-  <properties>
-    <!-- <r-uu-mvn-config-version>0.0.1</r-uu-mvn-config-version> -->
-  </properties>
 
 </project>
