--- a/.github/workflows/mvn_clean_install_control.yml
+++ b/.github/workflows/mvn_clean_install_control.yml
@@ -1,7 +1,7 @@
 name: build module r-uu/mvn-control with maven triggered manually
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # runs on manual trigger
     inputs:
       module:
         description: 'module r-uu/mvn-control'
@@ -11,6 +11,10 @@ on:
         description: 'skip tests?'
         required: false
         default: 'false'
+  push:
+    branches: ["**"]   # runs on every push to any branch
+  pull_request:        # runs on every PR to any branch
+    branches: ["**"]
 
 jobs:
   build:
@@ -24,7 +28,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '24'
-          distribution: 'temurin'
+          distribution: 'graalvm'
       - name: build with maven
         working-directory: ${{ inputs.module }}
         run: |
