--- a/r-uu/mvn-config/pom.properties
+++ b/r-uu/mvn-config/pom.properties
@@ -1,20 +1,20 @@
-# Java version
+# java version
 java.version=24
 
-# JVM args for testing
+# jvm args for testing
 argLine=-Duser.language=en
 
-# Plugin versions
+# plugin versions
 maven.clean.plugin.version=3.1.0
 maven.compiler.plugin.version=3.13.0
-maven.deploy.plugin.version=2.8.2
+#maven.deploy.plugin.version=2.8.2
 maven.install.plugin.version=2.5.2
 maven.jar.plugin.version=3.0.2
 maven.project.info.reports.plugin.version=3.0.0
 maven.resources.plugin.version=3.3.1
-maven.site.plugin.version=3.7.1
+#maven.site.plugin.version=3.7.1
 maven.surefire.plugin.version=3.5.0
 properties.maven.plugin.version=1.2.1
 
-# Dependency versions
-junit.jupiter.version=5.13.1
+# dependency versions
+#junit.jupiter.version=5.13.1
