--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -13,7 +13,7 @@
   <packaging>pom</packaging>
 
   <name>${project.artifactId}</name>
-  <description>Root module for ruu.codespace artifacts of group r-uu</description>
+  <description>root module for ruu.codespace artifacts of group r-uu</description>
   <url>https://github.com/r-uu/codespace</url>
 
   <!-- Only non-externalizable properties go here -->
@@ -28,7 +28,8 @@
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>${maven.clean.plugin.version}</version>
+          <!-- <version>${maven.clean.plugin.version}</version> -->
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -36,11 +37,13 @@
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>${maven.deploy.plugin.version}</version>
+          <!-- <version>${maven.deploy.plugin.version}</version> -->
+          <version>2.8.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>${maven.install.plugin.version}</version>
+          <!-- <version>${maven.install.plugin.version}</version> -->
+          <version>2.5.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -56,7 +59,8 @@
         </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
-          <version>${maven.site.plugin.version}</version>
+          <!-- <version>${maven.site.plugin.version}</version> -->
+          <version>3.7.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -72,7 +76,8 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>properties-maven-plugin</artifactId>
-        <version>${properties.maven.plugin.version}</version>
+        <!-- <version>${properties.maven.plugin.version}</version> -->
+        <version>1.2.1</version>
         <executions>
           <execution>
             <phase>initialize</phase>
@@ -95,7 +100,8 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>${junit.jupiter.version}</version>
+        <!-- <version>${junit.jupiter.version}</version> -->
+        <version>5.13.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
