--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -6,21 +6,32 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <!-- These cannot be externalized -->
+  <!-- ################################################## -->
+  <!-- maven project coordinates (cannot be externalized) -->
+  <!-- ################################################## -->
+
   <groupId>r-uu</groupId>
   <artifactId>r-uu.codespace.mvn-config</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
-
-  <name>${project.artifactId}</name>
+  <name>r-uu.codespace.mvn-config</name>
   <description>root module for ruu.codespace artifacts of group r-uu</description>
   <url>https://github.com/r-uu/codespace</url>
 
-  <!-- Only non-externalizable properties go here -->
+  <!-- ###################################### -->
+  <!-- properties are externalized to pom.env -->
+  <!-- ###################################### -->
+
+  <!-- only non-externalizable properties go here -->
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+    <project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
+    <!-- java.version is configured in .m2/toolchains.xml -->
+    <!-- redefining it here would lead to errors during build -->
+    <!-- <maven.compiler.source>${java.version}</maven.compiler.source> -->
+    <!-- <maven.compiler.target>${java.version}</maven.compiler.target> -->
+    <!-- <maven.compiler.source>24</maven.compiler.source> -->
+    <!-- <maven.compiler.target>24</maven.compiler.target> -->
   </properties>
 
   <build>
@@ -28,46 +39,57 @@
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <!-- <version>${maven.clean.plugin.version}</version> -->
+          <!-- <version>${plugin.clean.version}</version> -->
           <version>3.1.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven.compiler.plugin.version}</version>
+          <!-- <version>${plugin.compiler.version}</version> -->
+          <version>3.13.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <!-- <version>${maven.deploy.plugin.version}</version> -->
+          <!-- <version>${plugin.deploy.version}</version> -->
           <version>2.8.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <!-- <version>${maven.install.plugin.version}</version> -->
+          <!-- <version>${plugin.install.version}</version> -->
           <version>2.5.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven.jar.plugin.version}</version>
+          <!-- <version>${plugin.jar.version}</version> -->
+          <version>3.0.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>${maven.project.info.reports.plugin.version}</version>
+          <!-- <version>${plugin.project.info.reports.version}</version> -->
+          <version>${3.0.0}</version>
         </plugin>
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>${maven.resources.plugin.version}</version>
+          <!-- <version>${plugin.resources.version}</version> -->
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
-          <!-- <version>${maven.site.plugin.version}</version> -->
+          <!-- <version>${plugin.site.version}</version> -->
           <version>3.7.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.plugin.version}</version>
+          <!-- <version>${plugin.surefire.version}</version> -->
+          <version>3.5.0</version>
           <configuration>
-            <argLine>${argLine}</argLine>
+            <argLine>${plugin.surefire.argLine}</argLine>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>properties-maven-plugin</artifactId>
+          <!-- <version>${properties.maven.version}</version> -->
+          <version>1.2.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -76,17 +98,16 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>properties-maven-plugin</artifactId>
-        <!-- <version>${properties.maven.plugin.version}</version> -->
-        <version>1.2.1</version>
         <executions>
           <execution>
             <phase>initialize</phase>
+            <!-- <phase>validate</phase> -->
             <goals>
               <goal>read-project-properties</goal>
             </goals>
             <configuration>
               <files>
-                <file>pom.properties</file>
+                <file>pom.env</file>
               </files>
             </configuration>
           </execution>
@@ -98,12 +119,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.junit</groupId>
-        <artifactId>junit-bom</artifactId>
-        <!-- <version>${junit.jupiter.version}</version> -->
-        <version>5.13.1</version>
-        <type>pom</type>
-        <scope>import</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${dep.junit.version}</version>
+        <!-- <version>5.13.4</version> -->
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
