--- a/r-uu/app/demo/pom.xml
+++ b/r-uu/app/demo/pom.xml
@@ -3,16 +3,28 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>r-uu</groupId>
-    <artifactId>r-uu.codespace.app.demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>${project.artifactId}</name>
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>r-uu.codespace.app-demo</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>${project.artifactId}</name>
 
-    <parent>
-      <groupId>r-uu</groupId>
-      <artifactId>r-uu.codespace.app</artifactId>
-      <version>0.0.1</version>
-    </parent>
+	<parent>
+		<groupId>r-uu</groupId>
+		<artifactId>r-uu.codespace.app</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 </project>
