--- a/r-uu/mvn-config/pom.env
+++ b/r-uu/mvn-config/pom.env
@@ -25,10 +25,12 @@ project.sourceEncoding=UTF-8
 # plugin.site.version=3.7.1
 # plugin.surefire.version=3.5.0
 
+# dependency versions also cannot be externalized
+# because they are needed before the properties are loaded
+# dep.hamcrest.version=3.0
+# dep.junit.version=5.13.4
+# dep.slf4j.version=2.0.13
+
 # further plugin configuration values
 # jvm args for testing
 plugin.surefire.argLine=-Duser.language=en
-
-# dependency versions
-dep.junit.version=5.13.4
-#dep.slf4j.version=2.0.13
