--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -4,127 +4,136 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <!-- ################################################## -->
-  <!-- maven project coordinates (cannot be externalized) -->
-  <!-- ################################################## -->
+	<!-- ################################################## -->
+	<!-- maven project coordinates (cannot be externalized) -->
+	<!-- ################################################## -->
 
-  <groupId>r-uu</groupId>
-  <artifactId>r-uu.codespace.mvn-config</artifactId>
-  <version>0.0.1</version>
-  <packaging>pom</packaging>
-  <name>r-uu.codespace.mvn-config</name>
-  <description>root module for ruu.codespace artifacts of group r-uu</description>
-  <url>https://github.com/r-uu/codespace</url>
+	<groupId>r-uu</groupId>
+	<artifactId>r-uu.codespace.mvn-config</artifactId>
+	<version>0.0.1</version>
+	<packaging>pom</packaging>
+	<name>r-uu.codespace.mvn-config</name>
+	<description>root module for ruu.codespace artifacts of group r-uu</description>
+	<url>https://github.com/r-uu/codespace</url>
 
-  <!-- ###################################### -->
-  <!-- properties are externalized to pom.env -->
-  <!-- ###################################### -->
+	<!-- ###################################### -->
+	<!-- properties are externalized to pom.env -->
+	<!-- ###################################### -->
 
-  <!-- only non-externalizable properties go here -->
-  <properties>
-    <!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
-    <project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
-    <!-- java.version is configured in .m2/toolchains.xml -->
-    <!-- redefining it here would lead to errors during build -->
-    <!-- <maven.compiler.source>${java.version}</maven.compiler.source> -->
-    <!-- <maven.compiler.target>${java.version}</maven.compiler.target> -->
-    <!-- <maven.compiler.source>24</maven.compiler.source> -->
-    <!-- <maven.compiler.target>24</maven.compiler.target> -->
-  </properties>
+	<!-- only non-externalizable properties go here -->
+	<properties>
+		<!-- project.build.sourceEncoding is configured in pom.env -->
+		<project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
+		<!-- java.version is configured in .m2/toolchains.xml and maven.compiler.plugin (see below) -->
+		<!-- maven.compiler.* values are derived from java.version (see above) -->
+		<dep.hamcrest.version>3.0</dep.hamcrest.version>
+		<dep.junit.version>5.13.4</dep.junit.version>
+	</properties>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <!-- <version>${plugin.clean.version}</version> -->
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <!-- <version>${plugin.compiler.version}</version> -->
-          <version>3.13.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <!-- <version>${plugin.deploy.version}</version> -->
-          <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <!-- <version>${plugin.install.version}</version> -->
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <!-- <version>${plugin.jar.version}</version> -->
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <!-- <version>${plugin.project.info.reports.version}</version> -->
-          <version>${3.0.0}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <!-- <version>${plugin.resources.version}</version> -->
-          <version>3.3.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <!-- <version>${plugin.site.version}</version> -->
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <!-- <version>${plugin.surefire.version}</version> -->
-          <version>3.5.0</version>
-          <configuration>
-            <argLine>${plugin.surefire.argLine}</argLine>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>properties-maven-plugin</artifactId>
-          <!-- <version>${properties.maven.version}</version> -->
-          <version>1.2.1</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<!-- <version>${plugin.clean.version}</version> -->
+					<version>3.1.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<!-- <version>${plugin.compiler.version}</version> -->
+					<version>3.13.0</version>
+					<configuration>
+						<release>24</release> <!-- sets both source and target -->
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<!-- <version>${plugin.deploy.version}</version> -->
+					<version>2.8.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<!-- <version>${plugin.install.version}</version> -->
+					<version>2.5.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<!-- <version>${plugin.jar.version}</version> -->
+					<version>3.0.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<!-- <version>${plugin.project.info.reports.version}</version> -->
+					<version>${3.0.0}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<!-- <version>${plugin.resources.version}</version> -->
+					<version>3.3.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<!-- <version>${plugin.site.version}</version> -->
+					<version>3.7.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<!-- <version>${plugin.surefire.version}</version> -->
+					<version>3.5.0</version>
+					<configuration>
+						<argLine>${plugin.surefire.argLine}</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+					<!-- <version>${properties.maven.version}</version> -->
+					<version>1.2.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>initialize</phase>
-            <!-- <phase>validate</phase> -->
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-                <file>pom.env</file>
-              </files>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<!-- <phase>validate</phase> -->
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>pom.env</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>${dep.junit.version}</version>
-        <!-- <version>5.13.4</version> -->
-        <scope>test</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+	<dependencyManagement>
+		<!-- remember to keep dependencies in alphabetical order by artifactId-->
+		<dependencies>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest</artifactId>
+				<version>${dep.hamcrest.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter</artifactId>
+				<version>${dep.junit.version}</version>
+				<!-- <version>5.13.4</version> -->
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 </project>
