--- a/r-uu/mvn-config/pom.xml
+++ b/r-uu/mvn-config/pom.xml
@@ -25,7 +25,8 @@
 	<!-- only non-externalizable properties go here -->
 	<properties>
 		<!-- project.build.sourceEncoding is configured in pom.env -->
-		<project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<plugin.surefire.argLine>-Duser.language=en</plugin.surefire.argLine>
 		<!-- java.version is configured in .m2/toolchains.xml and maven.compiler.plugin (see below) -->
 		<!-- maven.compiler.* values are derived from java.version (see above) -->
 		<dep.hamcrest.version>3.0</dep.hamcrest.version>
@@ -86,34 +87,10 @@
 						<argLine>${plugin.surefire.argLine}</argLine>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>properties-maven-plugin</artifactId>
-					<!-- <version>${properties.maven.version}</version> -->
-					<version>1.2.1</version>
-				</plugin>
 			</plugins>
 		</pluginManagement>
 
 		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<!-- <phase>validate</phase> -->
-						<goals>
-							<goal>read-project-properties</goal>
-						</goals>
-						<configuration>
-							<files>
-								<file>pom.env</file>
-							</files>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
