--- a/r-uu/lib/util/pom.xml
+++ b/r-uu/lib/util/pom.xml
@@ -17,10 +17,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-<!--		<dependency>-->
+		<!--		<dependency>-->
 <!--			<groupId>r-uu</groupId>-->
 <!--			<artifactId>r-uu.codespace.mvn-config</artifactId>-->
 <!--			<version>0.0.1</version>-->
