--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ hs_err_pid*          # jvm crash logs
 # --------------------------------------------
 # 2. maven
 # --------------------------------------------
-target/              # standard maven build output directory
+**/target/           # standard maven build output directory in all maven submodules
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -33,7 +33,7 @@ buildNumber.properties
 # 3. gradle
 # --------------------------------------------
 .gradle/             # gradle cache
-build/               # gradle build output
+**/build/            # gradle build output in all gradle submodules
 !gradle-wrapper.jar  # keep wrapper JAR in repository
 
 # --------------------------------------------
