build correct root when pushing to remote: mvn_config instead mvn_control

--- a/.github/workflows/mvn_clean_install_config.yaml
+++ b/.github/workflows/mvn_clean_install_config.yaml
@@ -6,7 +6,7 @@ on:
       module:
         description: 'Module path to build (e.g. r-uu/mvn-control)'
         required: true
-        default: 'r-uu/mvn-control'
+        default: 'r-uu/mvn-config'
       skipTests:
         description: 'Skip tests?'
         required: false
