make github action run again

--- a/.github/workflows/mvn_clean_install_config.yaml
+++ b/.github/workflows/mvn_clean_install_config.yaml
@@ -1,78 +1,40 @@
-name: build maven modules manually or on push or pull request
+name: clean install complete codespace (all modules) on push or pull request
 
 on:
-  workflow_dispatch:   # run workflow on manual trigger
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
     inputs:
-      module:
-        description: 'Module path to build (e.g. r-uu/mvn-control)'
-        required: true
-        default: 'r-uu/mvn-config'
       skipTests:
-        description: 'Skip tests?'
+        description: 'Skip running tests'
         required: false
         default: 'false'
-  push:                # run workflow on any push
-    branches: ["**"]
-  pull_request:        # run workflow on any pull request
-    branches: ["**"]
 
 jobs:
-  detect-modules:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # Full history needed for git diff
-
-      - id: set-matrix
-        run: |
-          # Case 1: Workflow triggered manually (workflow_dispatch)
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            # Directly set matrix to the provided input
-            echo "matrix=[\"${{ inputs.module }}\"]" >> "$GITHUB_OUTPUT"
-          else
-            # Case 2: Workflow triggered by push or pull_request
-            BASE_REF="${{ github.event.pull_request.base.sha || github.event.before }}"
-            HEAD_REF="${{ github.sha }}"
-            echo "Comparing $BASE_REF..$HEAD_REF"
-
-            # Detect changed modules under r-uu/
-            CHANGED=$(git diff --name-only "$BASE_REF" "$HEAD_REF" | cut -d/ -f1-2 | sort -u | grep '^r-uu/' || true)
-
-            if [[ -z "$CHANGED" ]]; then
-              # No relevant changes → fallback to default module
-              echo "No changed r-uu modules found, defaulting to r-uu/mvn-control"
-              echo 'matrix=["r-uu/mvn-control"]' >> "$GITHUB_OUTPUT"
-            else
-              # Convert changed paths into a compact JSON array (for matrix)
-              JSON=$(printf '%s\n' $CHANGED | jq -R . | jq -s -c .)
-              echo "matrix=$JSON" >> "$GITHUB_OUTPUT"
-            fi
-          fi
-
   build:
-    needs: detect-modules
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{ fromJSON(needs.detect-modules.outputs.matrix) }}
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: set up java 24
+    steps:
+      # Checkout repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Set up JDK 24 (adjust if you want another version)
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '24'
-          distribution: 'graalvm'
+          distribution: temurin
+          java-version: 24
+          cache: maven
 
-      - name: build with maven
-        working-directory: ${{ matrix.module }}
+      # Build all modules starting from the root pom (mvn-config)
+      - name: Build with Maven
+        working-directory: r-uu/mvn-config
         run: |
-          # Skip tests only if triggered manually AND skipTests input is "true"
           if [[ "${{ github.event_name }}" == "workflow_dispatch" && "${{ inputs.skipTests }}" == "true" ]]; then
-            mvn clean install -DskipTests
+            mvn -B clean install -DskipTests
           else
-            mvn clean install
+            mvn -B clean install
           fi
