--- a/r-uu/app/jeeeraaah/pom.xml
+++ b/r-uu/app/jeeeraaah/pom.xml
@@ -19,6 +19,7 @@
 		<module>client</module>
 		<module>common</module>
 		<module>server</module>
-	</modules>
+        <module>data</module>
+    </modules>
 
 </project>
